# igus_ws

./: .gitmodules  README.md
src/igus_rebel_ros2/src/igus_rebel_moveit_config/: CMakeLists.txt
src/igus_rebel_ros2/src/igus_rebel_moveit_config/launch/: move_group.launch.py
src/igus_rebel_ros2/src/igus_rebel_moveit_config/src/: rebel_servo_teleop_gamepad.cpp  rebel_servo_teleop_keyboard.cpp
src/igus_student/: README.md  package.xml  setup.py  test_collision_objects.py
src/igus_student/igus_student/: simple_robot_control.py  student_robot_control.py
src/sample_package/: TEMPLATE_README.md  package.xml  setup.py
src/sample_package/config/: moveitpy_config.yaml
src/sample_package/launch/: roboter_template.launch.py
src/sample_package/sample_package/: README.md  roboter_template.py  roboter_template_action.py  student_template.py  test.py
